# automation-with-ansible

./: .gitignore  LICENSE.md  README.md  ansible.cfg  hosts.yml  pyproject.toml
playbooks/: 01-setup-server.yml  01-setup_server.yml  02-setup-project-db.yml  02-setup_project.yml  03-setup-project.yml
