[tool.poetry]
name = "automation-with-ansible"
version = "0.1.0"
description = "Automating boring stuff with Ansible"
authors = ["Sayan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
